tests/cases/should_fail/double_comma_in_list_literal/case.stderr
error: expected an expression, however received a `,`
 --> $DIR/case.hash:1:9
1 |   k := [1,,];
  |           ^ here
